# parry

./: .env_template  .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: create_fake_kafka_events.py  produce_events.py
src/generator/: transaction.py
